# ZubaxTest

./: README.md
Task1/: CMakeCache.txt  CMakeLists.txt  Makefile  Project.project  Project.workspace  cmake_install.cmake  executeTests  hold.txt  modular.cpp  modular.py  modular_test.cpp
Task1/.codelite/: Task1.session  Task1.tags  refactoring.db
Task2/: BigInteger.py  CMakeCache.txt  CMakeLists.txt  Makefile  biginteger.cpp  biginteger_test.cpp  cmake_install.cmake  executeTests  hold.txt  sum
Task3/: udp.py
